--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "pretty": true,
     "baseUrl": "./",
     "outDir": "./dist",
+    "rootDir": "./",
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["es2020"],
@@ -23,8 +24,11 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src/**/*", "test/**/*"],
+  "include": ["index.ts", "app.ts", "src/**/*"],
   "exclude": ["node_modules"]
 }
